# quiz40

./: .travis.yml  CMakeLists.txt  README.md  quiz40.cpp
